<resources>
    <string name="app_name">Family Reunion</string>
    <string name="textview">New to FamilyReunionApp? <a href="">Create Account</a></string>
    <string name="textview2">By joining you agree to App’s <a href="">Term \u0026 Condition</a></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="p_c">Password changed successfully, you can login again with a new password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="login">Login</string>
    <string name="committee_details">Committee Details</string>
    <string name="c_n">Committee Name</string>
    <string name="c_fd">Lorem ipsum dolor sit amet consectetur. Ut amet neque tincidunt vel fames faucibus sed facilisi nunc. Ipsum dui sed facilisis mauris velit. Sit viverra adipiscing ut amet vel. Mi velit gravida est viverra fringilla. Feugiat integer faucibus amet libero orci enim integer. Tristique et sed scelerisque sit mauris augue tortor et. Massa scelerisque sed erat nunc in adipiscing tellus. Gravida vestibulum eu venenatis fames sed lectus.</string>
    <string name="_2_to_do_item">2. To do item</string>
    <string name="_1_to_do_item">1. To do item</string>
    <string name="to_do_list">To-Do List:</string>
    <string name="create_poll_survery">Create Poll/Survery</string>
    <string name="group_chat">Group Chat</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="committees">Committees</string>
    <string name="create_committee">Create Committee</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="at_least_8_characters_with_a_combination_of_letters_and_numbers">At least 8 characters with a combination of letters and numbers</string>
    <string name="your_new_password_must_different_from_previous_password">Your new password must different from previous password.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="committee_name">Committee Name</string>
    <string name="write_message_here">Write message here…</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_verification_method_and_we_will_send_verification_code">Select verification method and we will send verification code</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_code_to_your_phone_number">Send code to your phone number</string>
    <string name="email">Email</string>
    <string name="send_code_to_your_email_address">Send code to your email address</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="welcome_to_familyreunionapp">Welcome to FamilyReunionApp!</string>
    <string name="aa">Start your family reunion journey with us. Connect! \t\t\tand plan memorable moments effortlessly.</string>
    <string name="login_to_account">Login to Account</string>
    <string name="google">GOOGLE</string>
    <string name="apple">Apple</string>
    <string name="enter_email">Enter email</string>
    <string name="nail">Email</string>
    <string name="enter">Enter password</string>
    <string name="p">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="aaaa">Please provide following details to continue</string>
    <string name="forget_password">Forget Password</string>
    <string name="asa">At least 8 characters with a combination of letters and numbers</string>
    <string name="name">Name</string>
    <string name="co">Confirm Password</string>
    <string name="ps">Password</string>
    <string name="e">Email</string>
    <string name="dda">Please provide following details to create your account!</string>
    <string name="plan">Plan and Schedule \t\t\t\t\t\t\t\t\t\t\t\t Events</string>
    <string name="se"><![CDATA[Seamlessly organize family gatherings with our event planning feature. View upcoming events &  add new ones.]]></string>
    <string name="receive_timely">Receive timely updates and announcements about \tyour family reunion. Explore the latest news and events.</string>
    <string name="stay_informed">Stay Informed with \t\t\tAnnouncements</string>
    <string name="collaborat">Collaborate with \t\t\t\t\t\t\t Committees</string>
    <string name="work_together">\tWork together efficiently by creating committees.Assign tasks, share to-do lists, and engage in group chats.</string>
    <string name="welco">Welcome to FamilyReunionApp!</string>
    <string name="start_your">Start your family reunion journey with us. Connect! \t\t\tand plan memorable moments effortlessly.</string>
    <string name="familyreunion">FamilyReunion</string>
    <string name="welcome_to">Welcome to 👋</string>
    <string name="famil">FamilyReunionApp is your all-in-one solution for orchestrating unforgettable family gatherings. Effortlessly coordinate announcements, schedule events, and collaborate with committees</string>
    <string name="_2_16_pm">2:16 PM</string>
    <string name="message_text">Message text</string>
    <string name="user_name">User Name</string>
    <string name="but">Button</string>
    <string name="c">Committee Name Lorem</string>
    <string name="committee_name_lorem">Committee Name Lorem</string>
    <string name="committ">Committees</string>
    <string name="_13_others">+ 13 others</string>
    <string name="committe">Committees</string>
    <string name="add_images_optional">Add Images (Optional)</string>
    <string name="discard">Discard</string>
    <string name="end_date">End Date</string>
    <string name="event_description">Event Description</string>
    <string name="end_time">End Time</string>
    <string name="event_name">Event Name</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="annoucment">annoucment</string>
    <string name="comm">Committees</string>
    <string name="overview">Overview</string>
    <string name="family_reunion_an">Family Reunion Announcement at Restau..</string>
    <string name="ok">OK</string>
    <string name="_10_10_2000">10/10/2000</string>
    <string name="as">as</string>
    <string name="fam">Family Reunion Announcement at Restau..</string>
    <string name="fa">Family Reunion Announcement at Restau..</string>
    <string name="livia_donin">Livia Donin</string>
    <string name="livi">Livia Donin</string>
    <string name="li">Livia Donin</string>
    <string name="james_anderson">James Anderson</string>
    <string name="latest_announcements">Latest Announcements</string>
    <string name="see_all">See All</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="sep_29_2022_10_00_pm">Sep 29, 2022 . 10:00 PM</string>
    <string name="family_reunion_event">Family Reunion Event</string>
    <string name="todoa">TODO</string>
    <string name="wel">Welcome to FamilyReunionApp!</string>
    <string name="well">Start your family reunion journey with us. Connect and plan memorable moments effortlessly.</string>

</resources>