<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    tools:context=".LoginTwoActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="392dp"
        android:background="@drawable/curve_shape"
        android:importantForAccessibility="no"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ExtraText,MissingConstraints,TextSizeCheck">

        /

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"

            android:background="@color/white"
            android:justificationMode="inter_word"
            android:text="@string/nail"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,UnusedAttribute" />

        <EditText
            android:id="@+id/input_field"
            android:layout_width="367dp"
            android:layout_height="42dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/black_border_button"
            android:hint="@string/enter_email"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:text="@string/p"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/input_field1"
            android:layout_width="375dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/black_border_button"
            android:hint="@string/enter"
            android:importantForAutofill="no"
            android:padding="10dp"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field"
            tools:ignore="TextFields" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="99dp"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="Remember me"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/input_field1"
            tools:ignore="HardcodedText,SmallSp,TextSizeCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="94dp"
            android:layout_height="24dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="28dp"
            android:text="@string/forget_password"
            android:textSize="9sp"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/input_field1"
            tools:ignore="SmallSp,TextSizeCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:text="@string/textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.058" />

        <Button
            android:id="@+id/button2"
            android:layout_width="153dp"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"

            android:background="@drawable/round_corner_button"
            android:drawableLeft="@drawable/img_3"
            android:text="@string/apple"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:ignore="RtlHardcoded,TextContrastCheck" />

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="72dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/login_to_account"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_field1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="147dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_button"
            android:contentDescription="@string/todo"
            android:drawableLeft="@drawable/img_4"
            android:importantForAccessibility="no"
            android:text="@string/google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="213dp"
        android:layout_height="126dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="224dp"
        android:layout_height="49dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="226dp"
        android:layout_height="27dp"
        android:text="@string/aaaa"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="235dp" />
</androidx.constraintlayout.widget.ConstraintLayout>