<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="VisualLintBounds">

    <!-- Time Text -->

    <!-- Back Button -->


    <ImageView
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_back"
        android:layout_below="@id/time"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        tools:ignore="UnknownId" />

    <!-- Committee Name -->

    <!-- Group Chat Label -->

    <!-- Menu Button -->
    <TextView
        android:id="@+id/committee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/back_button"
        android:layout_marginStart="81dp"
        android:layout_marginBottom="-5dp"
        android:layout_toEndOf="@id/back_button"
        android:text="@string/committee_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/group_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/committee_name"
        android:layout_marginStart="105dp"
        android:textColor="@color/gray"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/back_button"
        android:importantForAccessibility="no"
        android:text="@string/group_chat"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/menu_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_menu"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/committee_name"
        android:layout_marginEnd="16dp"/>

    <!-- Today Label -->

    <!-- Chat ListView -->

    <!-- Message Input Container -->
    <TextView
        android:id="@+id/today_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:layout_marginStart="150dp"
        android:background="@drawable/today_background"
        android:padding="8dp"

        android:text="Today"
        android:textSize="16sp"
        tools:ignore="HardcodedText" />

    <ListView
        android:id="@+id/chat_list"
        android:layout_width="369dp"
        android:layout_height="264dp"
        android:layout_above="@id/message_input_container"
        android:layout_below="@id/today_label"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="22dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

    <RelativeLayout
        android:id="@+id/message_input_container"
        android:layout_width="329dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/message_input_background"
        android:padding="8dp">

        <!-- Message Input -->
        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/send_button"
            android:background="@android:color/transparent"
            android:hint="@string/write_message_here"
            android:importantForAccessibility="no"
            android:importantForAutofill="no"
            android:padding="16dp"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <!-- Send Button -->
        <ImageView
            android:id="@+id/send_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_send" />
    </RelativeLayout>
</RelativeLayout>
